deployment/kubernetes/service.yaml
#
# The Kubernetes deployment file for our Web Host
#

kind: Service
apiVersion: v1
metadata:
  name: webhost-svc
spec:
  selector:
    app: webhost
  ports:
  - protocol: "TCP"
    port: 8102
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhost
  labels:
    app: webhost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhost
  template:
    metadata:
      labels:
        app: webhost
    spec:
      containers:
      - name: webhost
        image: webhost:v1
        imagePullPolicy: Never
        volumeMounts:
          - mountPath: /usr/webhost/certs
            name: ssl-cert
            readOnly: true
      volumes:
        - name: ssl-cert
          secret:
            secretName: webhost-svc-internal-cert
