deployment/kubernetes/ingress.yaml
#
# Expose the Web Host over port 443 if required
# The below host name is then configured on the host PC in the /etc/hosts file
# Note also that we issue quite large cookies containing tokens, so we have increased the default buffer size
#

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhost-ingress
  annotations:
    nginx.ingress.kubernetes.io/secure-backends: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
    nginx.ingress.kubernetes.io/proxy-buffer-size: '16k'
spec:
  tls:
    - hosts:
        - web.mycluster.com
      secretName: mycluster-com-tls
  rules:
    - host: web.mycluster.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhost-svc
                port:
                  number: 8102
