deployment/kubernetes/webhost-template.yaml
#
# The Kubernetes resources for the Web Host, which delivers static web content
#
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webhost
  labels:
    app: webhost
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webhost
  template:
    metadata:
      labels:
        app: webhost
    spec:
      containers:
      - name: webhost
        image: $DOCKER_IMAGE
        volumeMounts:
          - name: webhost-config
            mountPath: /usr/webhost/webhost.config.json
            subPath: webhost.config.json
            readOnly: true
          - name: shellapp-config
            mountPath: /usr/webhost/shellapp/shellapp.config.json
            subPath: shellapp.config.json
            readOnly: true
          - name: demoapp-config
            mountPath: /usr/webhost/demoapp/demoapp.config.json
            subPath: demoapp.config.json
            readOnly: true
      volumes:
        - name: webhost-config
          configMap:
            name: webhost-config
        - name: shellapp-config
          configMap:
            name: shellapp-config
        - name: demoapp-config
          configMap:
            name: demoapp-config
---
kind: Service
apiVersion: v1
metadata:
  name: webhost-svc
spec:
  selector:
    app: webhost
  ports:
  - name: http
    protocol: "TCP"
    port: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webhost-virtual-service
spec:
  hosts:
  - web.mycluster.com
  gateways:
  - istio-system/istio-ingress-gateway
  http:
  - route:
    - destination:
        host: webhost-svc
        port:
          number: 8000
