deployment/kubernetes/webhost.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: webhost
  labels:
    app: webhost
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webhost
  template:
    metadata:
      labels:
        app: webhost
    spec:
      containers:
      - name: webhost
        image: webhost:v1
        volumeMounts:
          - name: webhost-config
            mountPath: /usr/webhost/webhost.config.json
            subPath: webhost.config.json
            readOnly: true
          - name: shellapp-config
            mountPath: /usr/webhost/shellapp/shellapp.config.json
            subPath: shellapp.config.json
            readOnly: true
          - name: demoapp-config
            mountPath: /usr/webhost/demoapp/demoapp.config.json
            subPath: demoapp.config.json
            readOnly: true
          - name: webhost-ssl-cert
            mountPath: /usr/webhost/certs
            readOnly: true
      volumes:
        - name: webhost-config
          configMap:
            name: webhost-config
        - name: shellapp-config
          configMap:
            name: shellapp-config
        - name: demoapp-config
          configMap:
            name: demoapp-config
        - name: webhost-ssl-cert
          secret:
            secretName: webhost-pkcs12
---
kind: Service
apiVersion: v1
metadata:
  name: webhost-svc
  annotations:
    konghq.com/protocol: https
spec:
  selector:
    app: webhost
  ports:
  - name: https
    protocol: "TCP"
    port: 8101
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: webhost-ingress
spec:
  ingressClassName: kong
  tls:
    - hosts:
        - web.mycluster.com
  rules:
    - host: web.mycluster.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webhost-svc
                port:
                  name: https
